// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/Box default 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <Box
      as="div"
      className=""
      horizontalPadding=""
      outline={false}
      padding="no-space"
      style={
        Object {
          "outline": "1px dotted magenta",
        }
      }
      verticalPadding=""
    >
      Lorem ipsum
    </Box>
  </div>
</Router>
`;

exports[`Storyshots Layout/Box with horizontal & vertical padding 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <Box
      as="div"
      className=""
      horizontalPadding=""
      outline={false}
      padding={
        Array [
          "xxsmall",
          "medium",
        ]
      }
      style={
        Object {
          "outline": "1px dotted magenta",
        }
      }
      verticalPadding=""
    >
      Lorem ipsum
    </Box>
  </div>
</Router>
`;

exports[`Storyshots Layout/Box with horizontal padding 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <Box
      as="div"
      className=""
      horizontalPadding="medium"
      outline={false}
      padding="no-space"
      style={
        Object {
          "outline": "1px dotted magenta",
        }
      }
      verticalPadding=""
    >
      Lorem ipsum
    </Box>
  </div>
</Router>
`;

exports[`Storyshots Layout/Box with outline 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <Box
      as="div"
      className=""
      horizontalPadding=""
      outline={true}
      padding="large"
      verticalPadding=""
    >
      Lorem ipsum
    </Box>
  </div>
</Router>
`;

exports[`Storyshots Layout/Box with padding 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <Box
      as="div"
      className=""
      horizontalPadding=""
      outline={false}
      padding="medium"
      style={
        Object {
          "outline": "1px dotted magenta",
        }
      }
      verticalPadding=""
    >
      Lorem ipsum
    </Box>
  </div>
</Router>
`;

exports[`Storyshots Layout/Box with table 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <Box
      as="div"
      className=""
      horizontalPadding=""
      outline={false}
      padding="no-space"
      style={
        Object {
          "outline": "1px dotted magenta",
        }
      }
      verticalPadding=""
    >
      <Table
        className=""
        compact={false}
        emptyMessage="No entries found."
      >
        <THead>
          <Tr
            className=""
          >
            <Th
              className=""
            >
              Col A
            </Th>
            <Th
              className=""
            >
              Col B
            </Th>
            <Th
              className=""
            >
              Col C
            </Th>
          </Tr>
        </THead>
        <TBody>
          <Tr
            className=""
          >
            <Td
              className=""
            >
              a1
            </Td>
            <Td
              className=""
            >
              b1
            </Td>
            <Td
              className=""
            >
              c1
            </Td>
          </Tr>
          <Tr
            className=""
          >
            <Td
              className=""
            >
              a2
            </Td>
            <Td
              className=""
            >
              b2
            </Td>
            <Td
              className=""
            >
              c2
            </Td>
          </Tr>
          <Tr
            className=""
          >
            <Td
              className=""
            >
              a3
            </Td>
            <Td
              className=""
            >
              b3
            </Td>
            <Td
              className=""
            >
              c3
            </Td>
          </Tr>
        </TBody>
      </Table>
    </Box>
  </div>
</Router>
`;

exports[`Storyshots Layout/Box with vertical padding 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <Box
      as="div"
      className=""
      horizontalPadding=""
      outline={false}
      padding="no-space"
      style={
        Object {
          "outline": "1px dotted magenta",
        }
      }
      verticalPadding="medium"
    >
      Lorem ipsum
    </Box>
  </div>
</Router>
`;
